[package]
name = "elrond-sdk-erdrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0.44"
rand = "0.6.0"
bip39 = "1.0.1"
sha2 = "0.9.8"
hmac = { version = "0.11.0", features = ["std"] }
hex = "0.4.3"
ed25519 = "1.2.0"
pbkdf2 = { version = "0.9.0", default-features = false }
zeroize = "1.4.2"
bech32 = "0.8.1"