[package]
name = "elrond-sdk-erdrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.68", features = ["preserve_order"] }
serde_repr = "0.1.7"
anyhow = "1.0.44"
rand = "0.6.0"
bip39 = "1.0.1"
sha2 = "0.9.8"
sha3 = "0.9.1"
hmac = { version = "0.11.0", features = ["std"] }
hex = "0.4.3"
base64 = "0.13.0"
ed25519 = "1.2.0"
pbkdf2 = { version = "0.9.0", default-features = false }
zeroize = "1.4.2"
bech32 = "0.8.1"
itertools = "0.10.1"